--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Lucida Grande", Tahoma, sans-serif;
+    font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 18px;
 }
 
@@ -7,6 +7,6 @@ img {
 	border: 0;
 }
 
-h1, h2 {
+h1, h2, #networks, #footer {
 	text-align: center;
 }
