--- a/css/default.css
+++ b/css/default.css
@@ -10,3 +10,19 @@ img {
 h1, h2, #networks, #footer {
 	text-align: center;
 }
+
+@media only screen and (min-width: 992px) {
+    #home {
+        margin-top: 10%;
+        margin-left: 15%;
+        margin-right: 15%;
+        font-size: 28px;
+        border-color: black;
+        border-style: solid;
+        border-width: thick;
+        -moz-border-radius: 15px;
+        -webkit-border-radius: 15px;
+        -khtml-border-radius: 15px;
+        border-radius: 15px;
+    }
+}
