Fixed minor W3C validator warnings

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
           </li>
           {% endif %}
         </ul>
-        <p><img src="images/Created-By-Human-Not-By-AI-Badge-white@2x.png" alt="Created by human, not by AI"/></p>
+        <p><img src="images/Created-By-Human-Not-By-AI-Badge-white@2x.png" alt="Created by human, not by AI" ></p>
       </div>
     </div>
 
